added readme info

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                     <div class="card-header bg-primary text-white">
-                    <h4 class="card-title"><span class="material-icons">local_cafe</span>rwihewf</h4>
+                    <h4 class="card-title"><span class="material-icons">local_cafe</span>chris</h4>
                     <h5 class="card-subtitle mb-2">Manager</h5>
                     </div>
                     <p></p>
-                    <h6 class="card-text">ID: fwe;buofewoi;</h6>
-                    <h6 class="card-text">Email: <a href="mailto:wefbubfeuo">wefbubfeuo</a></h6>
+                    <h6 class="card-text">ID: 2</h6>
+                    <h6 class="card-text">Email: <a href="mailto:chris@gmail.com">chris@gmail.com</a></h6>
                     <h6 class="card-text">Office Number: undefined</h6>
                 </div>
             </div>
@@ -40,18 +40,37 @@
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <div class="card-header bg-primary text-white">
-                            <h4 class="card-title"><span class="material-icons">engineering</span>ewubefbo</h4>
+                            <h4 class="card-title"><span class="material-icons">engineering</span>becca</h4>
                             <h5 class="card-subtitle mb-2">Engineer</h5>
                             </div>
                             <p></p>
-                            <h6 class="card-text">ID: ewfbuefu</h6>
-                            <h6 class="card-text">Email: <a href="mailto:efwubewfiuo">efwubewfiuo</a></h6>
-                            <h6 class="card-text">GitHub: <a href="https://github.com/efubwefbuo" target="_blank" rel="noopener noreferrer">efubwefbuo</a></h6>
+                            <h6 class="card-text">ID: 5</h6>
+                            <h6 class="card-text">Email: <a href="mailto:becca@gmail.com">becca@gmail.com</a></h6>
+                            <h6 class="card-text">GitHub: <a href="https://github.com/becca" target="_blank" rel="noopener noreferrer">becca</a></h6>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section>
+            <div class="container">
+                <div class="intern">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <div class="card-header bg-primary text-white">
+                            <h4 class="card-title"><span class="material-icons">school</span>jessi</h4>
+                            <h5 class="card-subtitle mb-2">Intern</h5>
+                            </div>
+                            <p></p>
+                            <h6 class="card-text">ID: 6</h6>
+                            <h6 class="card-text">Email: <a href="mailto:jessi@gmail.com">jessi@gmail.com</a></h6>
+                            <h6 class="card-text">School: Richmond University</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </div>
     </main> 
     </body>
